fix(nav-menu): spacing for dropdown items

--- a/client/src/styles/components/_user-dropdown.scss
+++ b/client/src/styles/components/_user-dropdown.scss
@@ -27,6 +27,10 @@
 
 .dropdown-menu li {
   font-size: 14px;
+
+  &:nth-last-child(2) > a {
+    padding-bottom: 0;
+  }
 }
 
 .dropdown-menu a:hover {
